[package]
name = "upscaling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.1"
dirs = "5.0.1"
eyre = "0.6.8"
lazy_format = "2.0.0"
once_cell = "1.18.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
shlex = "1.2.0"
ureq = "2.8.0"
zip = "=0.6.6"
